GNOME Bugzilla – Bug 737169
lua-factory: Avoid warning if fetching an item failed
Last modified: 2014-09-25 08:19:36 UTC
.
Created attachment 286868 [details] [review] lua-factory: Avoid warning if fetching an item failed Before we check whether we have valid UTF-8, best check if fetching the item actually worked.
Review of attachment 286868 [details] [review]: LGTM
Attachment 286868 [details] pushed as 2dbe7d4 - lua-factory: Avoid warning if fetching an item failed