lua-factory: Avoid warning if fetching an item failed

Before we check whether we have valid UTF-8, best check if fetching
the item actually worked.

https://bugzilla.gnome.org/show_bug.cgi?id=737169